# CodeMap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  testing.md
examples/: README.md
examples/js_project/: package.json
examples/js_project/src/: index.js
examples/js_project/src/components/: App.jsx  Footer.jsx  Header.jsx
examples/js_project/src/services/: api.js  auth.js
examples/js_project/src/utils/: helpers.js
examples/python_project/app/: __init__.py  main.py  models.py  services.py  utils.py
examples/python_project/tests/: test_app.py
scripts/: pre-commit
src/codemap/: __init__.py
src/codemap/application/: analyzer.py  config.py  grapher.py  reporter.py  scanner.py
src/codemap/cli/: app.py  progress.py
src/codemap/cli/commands/: analyze.py  graph.py  report.py  scan.py
src/codemap/domain/: metrics.py  model.py  protocols.py
src/codemap/infrastructure/: filesystem.py  git.py
src/codemap/infrastructure/extractors/: js_extractor.py  python_extractor.py
src/codemap/rendering/: _html_template.py  html_renderer.py  json_renderer.py  pdf_renderer.py  terminal_renderer.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_extraction.py  test_graph.py  test_metrics.py  test_ownership.py  test_rendering.py  test_rendering_html.py  test_rendering_html_perf.py  test_rendering_json.py  test_rendering_pdf.py  test_rendering_terminal.py  test_reverse_deps.py  test_scanning.py
