[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemap"
version = "1.0.0"
description = "Framework-agnostic repository analysis tool that builds clear, representative maps of codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "POLPROG" },
]
keywords = ["codebase", "analysis", "dependency-graph", "architecture", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pdf = [
    "fpdf2>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
codemap = "codemap.cli.app:main"

[project.urls]
Homepage = "https://github.com/polprog-tech/CodeMap"
Repository = "https://github.com/polprog-tech/CodeMap"
Issues = "https://github.com/polprog-tech/CodeMap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codemap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "SIM115"]
"src/codemap/rendering/_html_template.py" = ["E501"]
"src/codemap/cli/commands/*" = ["B008"]
